# evermind-terminal

./: .env.template  README.md  pyproject.toml
Model_json/: model_json.py
concat_model/: concat.py
memory/: evermem_client.py  privacy_filter.py
src/: main.py
